clusters/home/infra/controllers/monitoring/loki-httproute.yaml
---
# HTTPRoute for Loki query UI
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki
  namespace: monitoring
spec:
  parentRefs:
    - name: home-gateway
      namespace: default
      sectionName: https
  hostnames:
    - "cameronrosier.com"
    - "www.cameronrosier.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /lab/loki
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: loki-stack
          port: 3100
