clusters/home/infra/controllers/monitoring/prometheus-httproute.yaml
---
# HTTPRoute for Prometheus using Gateway API
# Serves Prometheus at https://cameronrosier.com/lab/prometheus
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
    - name: home-gateway
      namespace: default
      sectionName: https  # Use HTTPS listener
  hostnames:
    - "cameronrosier.com"
    - "www.cameronrosier.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /lab/prometheus
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
